2022 day 01 plus some older ones done previously

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-14.py
-14data.txt
+2021/14.py
+2021/14data.txt
+2021/14testdata.txt
+2021/15.py
 *.run
 **/ignored
 **/testdata.txt
 **/.vscode
-2015
-
